fix bugs, center align objects

--- a/assets/typography.css
+++ b/assets/typography.css
@@ -256,7 +256,7 @@ button[disabled] {
     width: 100%;
     background-color: rgb(190, 0, 28);
     opacity: 50%;
-    border: 10px dashed black;
+    border: 8px dashed black;
 }
 
 .div-with-invisible-button button[id$="-back"] {
@@ -271,7 +271,8 @@ button[disabled] {
     position: absolute;
     margin: 0;
     padding: 20px;
-    top: 40%;
+    top: 50%;
+    transform: translateY(-50%);
     pointer-events: none;
     font-size: 150%;
     font-weight: bold;
@@ -491,16 +492,12 @@ div[id$="-result"] {
 
 #wnrs-prompt {
     position: absolute;
-    top: 0;
-    bottom: 0;
+    top: 50%;
     left: 0;
     right: 0;
-    margin: auto;
-    padding: 10px;
-    height: 55%;
+    transform: translateY(-50%);
     font-family: sans-serif;
     font-weight: bold;
-    line-height: 140%;
 }
 
 #wnrs-deck {
